# OWL-RL

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  README.rst  README.txt  README_OLD.md  build-debian-source.txt  debian_changelog.txt  generateRDFClosureDoc  pypi.txt  pyproject.toml  rational.py  requirements-dev.txt  requirements.txt  secretkey.asc.enc  setup.cfg  setup.py  setup.py.old  stdeb.cfg
Doc/: RDFClosure-module.html  RDFClosure-pysrc.html  RDFClosure.AxiomaticTriples-module.html  RDFClosure.AxiomaticTriples-pysrc.html  RDFClosure.Closure-module.html  RDFClosure.Closure-pysrc.html  RDFClosure.Closure.Core-class.html  RDFClosure.Closure.Extension_Base-class.html  RDFClosure.CombinedClosure-module.html  RDFClosure.CombinedClosure-pysrc.html  RDFClosure.CombinedClosure.RDFS_OWLRL_Semantics-class.html  RDFClosure.DatatypeHandling-module.html  RDFClosure.DatatypeHandling-pysrc.html  RDFClosure.DatatypeHandling._namelessTZ-class.html  RDFClosure.DeductiveClosure-class.html  RDFClosure.Literals-module.html  RDFClosure.Literals-pysrc.html  RDFClosure.Literals.LiteralProxies-class.html  RDFClosure.Literals._LiteralStructure-class.html  RDFClosure.OWL'-module.html  RDFClosure.OWL'-pysrc.html  RDFClosure.OWLDatatypes-module.html  RDFClosure.OWLDatatypes._namelessTZ-class.html  RDFClosure.OWLRL-module.html  RDFClosure.OWLRL-pysrc.html  RDFClosure.OWLRL.OWLRL_Semantics-class.html  RDFClosure.OWLRLExtras-module.html  RDFClosure.OWLRLExtras-pysrc.html  RDFClosure.OWLRLExtras.OWLRL_Extension-class.html  RDFClosure.OWLRLExtras.OWLRL_Extension_Trimming-class.html  RDFClosure.RDFS'-module.html  RDFClosure.RDFS'-pysrc.html  RDFClosure.RDFSClosure-module.html  RDFClosure.RDFSClosure-pysrc.html  RDFClosure.RDFSClosure.RDFS_Semantics-class.html  RDFClosure.RestrictedDatatype-module.html  RDFClosure.RestrictedDatatype-pysrc.html  RDFClosure.RestrictedDatatype.RestrictedDatatype-class.html  RDFClosure.RestrictedDatatype.RestrictedDatatypeCore-class.html  RDFClosure.XsdDatatypes-module.html  (+64 more)
Doc_OLD/: RDFClosure-module.html  RDFClosure.AxiomaticTriples-module.html  RDFClosure.Closure-module.html  RDFClosure.Closure-pysrc.html  RDFClosure.CombinedClosure-module.html  RDFClosure.DatatypeHandling._namelessTZ-class.html  RDFClosure.Literals.LiteralProxies-class.html  RDFClosure.OWLRL-module.html  api-objects.txt  (+16 more)
(+95 files in other folders)
